--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,17 @@ repositories {
 
 dependencies {
     implementation 'com.google.guava:guava:26.0-jre'
-
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:2.23.4'
+}
+
+jar {
+    manifest {
+        attributes "Main-Class": "keyboardteacher.App"
+    }
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 mainClassName = 'keyboardteacher.App'
